--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,13 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.11.0",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "framer-motion": "^12.23.12",
     "react": "^19.1.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-rnd": "^10.5.2",
     "react-router-dom": "^7.8.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
