--- a/Backend/requirements_prod.txt
+++ b/Backend/requirements_prod.txt
@@ -1,32 +1,68 @@
-# requirements_prod.txt
-# Lean dependencies for running Focus Guardian (inference only)
-
-# This special line tells pip to look for CPU-only versions of torch.
---find-links https://download.pytorch.org/whl/cpu
-
-# Now, list the packages. Pip will use the link above for these.
-torch
-torchvision
-torchaudio
-
-# Core ML/AI Libraries
-transformers>=4.0.0
-sentencepiece
-scikit-learn
-joblib
-
-# Computer Vision & Face Tracking
-opencv-python
-mediapipe
-scipy
-numpy
-
-# Screen & Window Tracking
-psutil
-pyautogui
-pytesseract
-pywinauto
-Pillow
-
-# Utilities
-requests
+absl-py==2.3.1
+attrs==25.3.0
+certifi==2025.7.14
+cffi==1.17.1
+charset-normalizer==3.4.2
+colorama==0.4.6
+comtypes==1.4.11
+contourpy==1.3.3
+cycler==0.12.1
+filelock==3.18.0
+flatbuffers==25.2.10
+fonttools==4.59.0
+fsspec==2025.7.0
+huggingface-hub==0.34.3
+idna==3.10
+jax==0.7.0
+jaxlib==0.7.0
+Jinja2==3.1.6
+joblib==1.5.1
+kiwisolver==1.4.8
+MarkupSafe==3.0.2
+matplotlib==3.10.3
+mediapipe==0.10.21
+ml_dtypes==0.5.1
+MouseInfo==0.1.3
+mpmath==1.3.0
+networkx==3.5
+numpy>=1.26,<2
+opencv-contrib-python==4.11.0.86
+opencv-python<4.12
+opt_einsum==3.4.0
+packaging==25.0
+pillow==11.3.0
+protobuf==4.25.3
+psutil==7.0.0
+PyAutoGUI==0.9.54
+pycparser==2.22
+PyGetWindow==0.0.9
+PyMsgBox==1.0.9
+pyparsing==3.2.3
+pyperclip==1.9.0
+PyRect==0.2.0
+PyScreeze==1.0.1
+pytesseract==0.3.13
+python-dateutil==2.9.0.post0
+pytweening==1.2.0
+pywin32==311
+pywinauto==0.6.9
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.4
+safetensors==0.5.3
+scikit-learn==1.7.1
+scipy==1.16.1
+sentencepiece==0.2.0
+setuptools==80.9.0
+six==1.17.0
+sounddevice==0.5.2
+sympy==1.14.0
+threadpoolctl==3.6.0
+tokenizers==0.21.4
+torch==2.7.1
+torchaudio==2.7.1
+torchvision==0.22.1
+tqdm==4.67.1
+transformers==4.54.0
+typing_extensions==4.14.1
+urllib3==2.5.0
