--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,28 +2,38 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "main": "main.js",
+  "homepage": "./",
   "dependencies": {
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.11.0",
+    "axios": "^1.8.4",
+    "chart.js": "^4.4.8",
     "chartjs-adapter-date-fns": "^3.0.0",
+    "eventsource-parser": "^3.0.1",
     "framer-motion": "^12.23.12",
-    "react": "^19.1.1",
+    "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.1.1",
+    "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-rnd": "^10.5.2",
-    "react-router-dom": "^7.8.2",
+    "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
+    "remark-gfm": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "electron:start": "electron .",
+    "dev:backend": "cd ../node_backend && npm start",
+    "electron:wait": "wait-on http://localhost:3000 && npm run electron:start",
+    "dev": "concurrently \"npm:start\" \"npm:dev:backend\" \"npm:electron:wait\""
   },
   "eslintConfig": {
     "extends": [
@@ -42,5 +52,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "concurrently": "^9.2.0",
+    "electron": "^37.2.3",
+    "electron-is-dev": "^3.0.1",
+    "wait-on": "^8.0.3"
   }
 }
