--- a/node_backend/package.json
+++ b/node_backend/package.json
@@ -22,10 +22,11 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.2",
+    "mongoose-encryption": "^2.1.2",
     "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.9"
   },
   "engines": {
-  "node": "20.x.x"
-}
+    "node": "20.x.x"
+  }
 }
