--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,9 +26,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "electron:start": "electron .",
     "dev:backend": "cd ../node_backend && npm start",
@@ -55,8 +55,10 @@
   },
   "devDependencies": {
     "concurrently": "^9.2.0",
+    "customize-cra": "^1.0.0",
     "electron": "^37.2.3",
     "electron-is-dev": "^3.0.1",
+    "react-app-rewired": "^2.2.1",
     "wait-on": "^8.0.3"
   }
 }
